--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
         "filament/filament": "^4.0",
         "laravel/framework": "^12.0",
         "laravel/tinker": "^2.10.1",
+        "relaticle/flowforge": "^2.1",
         "spatie/laravel-permission": "^6.23"
     },
     "require-dev": {
